# car-scraper

./: .gitignore  CLAUDE.md  README.md  alembic.ini  pyproject.toml
.claude/commands/: batch.md
alembic/: README.md  env.py
alembic/versions/: 031e54cbb913_add_car_listing_last_viewed_at.py  37ab609affa3_convert_mileage_to_mil.py  4c5d087408ae_seed_kvd_se_dealer.py  75b536ddef11_seed_bilweb_se_dealer.py  86511a487ec0_add_scrape_run_and_log_tables.py  a1b2c3d4e5f6_seed_bytbil_se_dealer.py  b44edba46cca_add_listing_images_table.py  c3a9f1d2e4b7_add_car_listing_discarded.py  f764af9de14d_create_core_tables.py
scripts/: run_daily_scrape.bat  start_dashboard.bat
src/carscraper/: __init__.py  config.py  main.py
src/carscraper/api/: __init__.py  config.py  dealers.py  listings.py  stats.py
src/carscraper/cli/: __init__.py  __main__.py  main.py
src/carscraper/db/: __init__.py  models.py  session.py
src/carscraper/scrapers/: __init__.py  base.py  registry.py
src/carscraper/services/: __init__.py  dealers.py  (+8 more)
tests/: test_smoke.py
tests/api/: test_health.py  test_listings.py  test_routers.py
tests/cli/: test_clear_demo_data.py  test_run_scrape.py  test_seed_demo_data.py
tests/db/: test_models.py  test_session.py
tests/scrapers/: dummy.py  test_base.py  test_registry.py
tests/services/: test_demo_data.py  test_images.py  test_listing_status.py  test_listings.py  test_scrape_results.py  test_scrape_runner.py  test_stats.py  test_tracked_models.py
tests/web/: test_dashboard.py  test_listings.py  test_scrape.py  test_stats.py  test_tracked_models.py
(+46 files in other folders)
