[project]
name = "carscraper"
version = "0.1.0"
description = "Personal tool for tracking used-car listings from Swedish car dealer websites."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "typer>=0.12",
    "jinja2>=3.1",
    "httpx>=0.27",
    "playwright>=1.45",
    "beautifulsoup4>=4.12",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5",
    "black>=24.4",
    "pytest>=8.2",
    "pytest-asyncio>=0.23",
]

[project.scripts]
carscraper = "carscraper.cli.main:app"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra"
asyncio_mode = "auto"
